<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FDBWindowStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation"
    android:screenOrientation="landscape">

    <include layout="@layout/appbar" />

    <include layout="@layout/bg_general" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alignmentMode="alignBounds"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btnConsultant"
            style="@style/FDBButtonStyle"
            android:text="@string/consultant" />

        <!--
        <Button
            android:id="@+id/btnGallery"
            style="@style/FDBButtonStyle"
            android:text="@string/gallery" />
        -->

        <Button
            android:id="@+id/btnWebsite"
            style="@style/FDBButtonStyle"
            android:text="@string/website" />

        <Button
            android:id="@+id/btnAbout"
            style="@style/FDBButtonStyle"
            android:text="@string/story" />

        <Button
            android:id="@+id/btnAppAbout"
            style="@style/FDBButtonStyle"
            android:text="@string/app_about" />

    </GridLayout>


</RelativeLayout>