<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation"
    android:screenOrientation="landscape">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:alignmentMode="alignBounds"
        android:columnCount="2"

        android:columnOrderPreserved="false"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/buttonFr"
            style="@style/CKButton"
            android:text="@string/button_french" />


        <Button
            android:id="@+id/buttonEn"
            style="@style/CKButton"
            android:text="@string/button_english" />

        <Button
            android:id="@+id/buttonCh"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_toEndOf="@+id/relativeLayout"
            android:layout_toRightOf="@+id/relativeLayout"
            android:text="@string/button_chinese" />


        <Button
            android:id="@+id/buttonJa"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_toEndOf="@+id/relativeLayout"
            android:layout_toRightOf="@+id/relativeLayout"
            android:text="@string/button_japanese" />


    </GridLayout>


</RelativeLayout>